Add login UI with image and update styles
Introduced a new Rocket.png image and updated index.html to include a login and password input, along with Login and Register buttons. The page title was changed to 'Stalker'seer'. CSS was refactored to style images and remove previous body and button styles.

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stalker'seer</title>
 
     <link rel="stylesheet" href="Style.Css">
     <script src="../Logic.js"></script>
 </head>
 <body>
-    <button class="banaani" onclick="send(document.getElementById('textarea').value)">Nappi Extreme</button>
 
+    <img src="Images/Rocket.png">
+    <p>Login</p>
     <input type="text" id="textarea">
-    
+    <p>Password</p>
+    <input type="password" id="password_input">
+    <input type="submit" value="Login">
+    <input type="button" value="Register">
 
-    <input type="password" name="" id="">
 </body>
 </html>
