--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stalker'seer</title>
 
-    <link rel="stylesheet" href="Style.Css">
-    <script src="../Logic.js"></script>
+    <!-- <link rel="stylesheet" href="Style.Css" /> -->
+    <!-- <script src="../Logic.js"></script> -->
+
 </head>
+
 <body>
+    <a href="Images/Rocket.png" download>
+        <img src="Images/Rocket.png" alt="Rocket Image"  />
+    </a>
 
-    <img src="Images/Rocket.png">
     <p>Login</p>
-    <input type="text" id="textarea">
-    <p>Password</p>
-    <input type="password" id="password_input">
-    <input type="submit" value="Login">
-    <input type="button" value="Register">
+    <input type="text" id="textarea" />
 
+    <p>Password <em class="i">Word</em></p>
+    <input type="password" id="password_input" />
+    <input type="submit" value="Login" />
+
+    <a href="/test/Register.html" target="_blank">Register</a>
 </body>
 </html>
