Refactor login form structure and improve layout

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stalker'seer</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Stalker'seer</title>
 
-    <!-- <link rel="stylesheet" href="Style.Css" /> -->
-    <!-- <script src="../Logic.js"></script> -->
+        <!-- <link rel="stylesheet" href="Style.Css" /> -->
+        <!-- <script src="../Logic.js"></script> -->
 
-</head>
+    </head>
 
-<body>
-    <a href="Images/Rocket.png" download>
-        <img src="Images/Rocket.png" alt="Rocket Image"  />
-    </a>
+    <body>
 
-    <p>Login</p>
-    <input type="text" id="textarea" />
+        <div class="login-container">
+            <h2>Login</h2>
+            
+            <form action="">
+                <p>Username/Email</p>
+                <input type="text" id="textarea" />
+                <p>Password</p>
+                <input type="password" id="password_input" />
+                <input type="submit" value="Login" />
+            </form>
 
-    <p>Password <em class="i">Word</em></p>
-    <input type="password" id="password_input" />
-    <input type="submit" value="Login" />
+            <a href="/test/Register.html" target="_blank">Register</a>
+        </div>
 
-    <a href="/test/Register.html" target="_blank">Register</a>
-</body>
+    </body>
+
 </html>
