--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Stalker'seer</title>
 
-        <!-- <link rel="stylesheet" href="Style.Css" /> -->
+        <link rel="stylesheet" href="Style.css">
         <!-- <script src="../Logic.js"></script> -->
 
     </head>
@@ -16,11 +16,13 @@
             <h2>Login</h2>
             
             <form action="">
-                <p>Username/Email</p>
-                <input type="text" id="textarea" />
-                <p>Password</p>
-                <input type="password" id="password_input" />
-                <input type="submit" value="Login" />
+                <label for="username-textarea">Username/Email</label>
+                <input type="text" id="username-textarea" />
+
+                <label for="password-input">Password</label>
+                <input type="password" id="password-input" />
+
+                <button type="submit">Login</button>
             </form>
 
             <a href="/test/Register.html" target="_blank">Register</a>
