Enhance login form by adding name attributes and placeholders for better usability

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -17,10 +17,10 @@
             
             <form action="">
                 <label for="username-textarea">Username/Email</label>
-                <input type="text" id="username-textarea" />
+                <input type="text" id="username-textarea" name="username" placeholder="Enter your username or email" />
 
                 <label for="password-input">Password</label>
-                <input type="password" id="password-input" />
+                <input type="password" id="password-input" name="password" placeholder="Enter your password" />
 
                 <button type="submit">Login</button>
             </form>
