Refactor button styles and update login form to use a consistent submit button class

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -22,7 +22,7 @@
                 <label for="password-input">Password</label>
                 <input type="password" id="password-input" name="password" placeholder="Enter your password" />
 
-                <button type="submit">Login</button>
+                <button type="submit" class="submit-button">Login</button>
             </form>
 
             <a href="/test/Register.html" target="_blank">Register</a>
