Refactor login form structure and improve styling for better usability

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -16,16 +16,20 @@
             <h2>Login</h2>
             
             <form action="">
-                <label for="username-textarea">Username/Email</label>
-                <input type="text" id="username-textarea" name="username" placeholder="Enter your username or email" />
+                <label for="username">Username/Email</label>
+                <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username or email" />
+                
 
-                <label for="password-input">Password</label>
-                <input type="password" id="password-input" name="password" placeholder="Enter your password" />
+                <label for="password">Password</label>
+                <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" />
 
                 <button type="submit" class="submit-button">Login</button>
             </form>
 
-            <a href="/test/Register.html" target="_blank">Register</a>
+            <p>don't have an account 
+                <a href="/test/Register.html">Register</a>
+                now!
+            </p>
         </div>
 
     </body>
