Refactor styles for login and registration forms, enhance grid background, and remove unused Register.html file

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -27,11 +27,12 @@
             </form>
 
             <p>don't have an account 
-                <a href="/test/Register.html">Register</a>
+                <a href="Register.html">Register</a>
                 now!
             </p>
         </div>
 
+        <div class="grid"></div>
     </body>
 
 </html>
