feat: enhance registration form with email input and improved styling

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -19,11 +19,11 @@
             
             <form>
                 <label for="username">Username/Email</label>
-                <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username or email" />
+                name: <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username or email" />
                 
 
                 <label for="password">Password</label>
-                <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" />
+                password: <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" />
 
                 <button type="submit" class="submit-button">Login</button>
             </form>
