--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -14,27 +14,25 @@
 
     <body>
 
+        <div class="bg-shape"></div>
+        <div class="bg-shape"></div>
+        <div class="bg-shape"></div>
+
         <div class="login-container">
             <h2>Login</h2>
             
             <form>
-                <label for="username">Username/Email</label>
-                name: <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username or email" />
+                <label for="username">Username</label>
+                <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required/>
                 
 
                 <label for="password">Password</label>
-                password: <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" />
+                <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" required/>
 
                 <button type="submit" class="submit-button">Login</button>
             </form>
-
-            <p>don't have an account 
-                <a href="Register.html">Register</a>
-                now!
-            </p>
+                <a href="Register.html">don't have an account Register now!</a>
         </div>
-
-        <div class="grid"></div>
     </body>
 
 </html>
