feat: implement registration form submission and server handling

--- a/SQLDatabaseProject/Html/Register.html
+++ b/SQLDatabaseProject/Html/Register.html
@@ -15,7 +15,7 @@
         <div class="register-container">
             <h2>Register an account</h2>
             
-            <form>
+            <form action="/submit" method="post">
                 
                 <label for="username">Username<em style="color: red;">*</em></label>
                 <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required />
