--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -6,9 +6,9 @@
         <title>Stalker'seer</title>
 
         <link rel="stylesheet" href="login_style.Css">
-        <windows class="onload">
+        <!--<windows class="onload">
             <script src="client.js"></script>
-        </windows>
+        </windows>-->
 
     </head>
 
@@ -21,7 +21,8 @@
         <div class="login-container">
             <h2>Login</h2>
             
-            <form>
+            <form action="/submit" method="post">
+
                 <label for="username">Username</label>
                 <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required/>
                 
@@ -33,6 +34,8 @@
             </form>
                 <a href="Register.html">don't have an account Register now!</a>
         </div>
+
+
     </body>
 
 </html>
