front end /backend connection works

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -6,9 +6,9 @@
         <title>Stalker'seer</title>
 
         <link rel="stylesheet" href="login_style.Css">
-        <!--<windows class="onload">
+        <windows class="onload">
             <script src="client.js"></script>
-        </windows>-->
+        </windows>
 
     </head>
 
@@ -21,7 +21,7 @@
         <div class="login-container">
             <h2>Login</h2>
             
-            <form action="/submit" method="post">
+            <form id ="login-form">
 
                 <label for="username">Username</label>
                 <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required/>
