--- a/SQLDatabaseProject/Html/Register.html
+++ b/SQLDatabaseProject/Html/Register.html
@@ -15,13 +15,13 @@
         <div class="register-container">
             <h2>Register an account</h2>
             
-            <form action="/submit" method="post">
+            <form id="register-form">
                 
                 <label for="username">Username<em style="color: red;">*</em></label>
                 <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required />
 
                 <label for="password">Password<em style="color: red;">*</em></label>
-                <input class="textarea" type="password" id="Password" name="password" placeholder="Enter your password" required/>
+                <input class="textarea" type="password" id="password" name="password" placeholder="Enter your password" required/>
 
                 <button type="submit" class="submit-button">Submit</button>
             </form>
