feat: enhance registration page with animated background and improve server form handling

--- a/SQLDatabaseProject/Html/Register.html
+++ b/SQLDatabaseProject/Html/Register.html
@@ -11,6 +11,11 @@
     </head>
 
     <body>
+        <div class="bg-shape"></div>
+        <div class="bg-shape"></div>
+        <div class="bg-shape"></div>
+        
+
 
         <div class="register-container">
             <h2>Register an account</h2>
