--- a/SQLDatabaseProject/Html/Register.html
+++ b/SQLDatabaseProject/Html/Register.html
@@ -7,6 +7,9 @@
 
         <link rel="stylesheet" href="register_style.css">
         
+        <window class="onload">
+            <script src="register-client.js"></script>
+        </window>
 
     </head>
 
