--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="login_style.Css">
         <windows class="onload">
-            <script src="client.js"></script>
+            <script src="login-client.js"></script>
         </windows>
 
     </head>
