fix: correct HTML tag and update bcrypt usage in server logic

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -6,9 +6,10 @@
         <title>Stalker'seer</title>
 
         <link rel="stylesheet" href="login_style.Css">
-        <windows class="onload">
+
+        <window class="onload">
             <script src="login-client.js"></script>
-        </windows>
+        </window>
 
     </head>
 
