feat: add cookie management for express-session
- Implemented a new Cookie class for managing session cookies, including properties like path, maxAge, httpOnly, and secure.
- Added methods for serializing cookies and returning JSON representations.

feat: create in-memory session store for express-session

- Developed MemoryStore class to manage session data in memory.
- Implemented methods for session management including all, clear, destroy, get, set, length, and touch.

feat: enhance session handling in express-session

- Created Session class to encapsulate session data and provide methods for touch, resetMaxAge, save, reload, destroy, and regenerate.
- Improved session regeneration and loading mechanisms.

feat: abstract session store functionality

- Introduced Store class as an abstract base for session stores.
- Added methods for regenerating sessions and loading session instances.

chore: update on-headers module

- Added history and license files for on-headers.
- Implemented README documentation for on-headers module.

chore: update random-bytes module

- Added history, license, and README files for random-bytes.
- Implemented core functionality for generating random bytes.

chore: update uid-safe module

- Added history, license, and README files for uid-safe.
- Implemented functionality for generating URL and cookie safe UIDs.

--- a/SQLDatabaseProject/Html/index.html
+++ b/SQLDatabaseProject/Html/index.html
@@ -14,10 +14,9 @@
     </head>
 
     <body>
-
-        <div class="bg-shape"></div>
-        <div class="bg-shape"></div>
-        <div class="bg-shape"></div>
+        <h1 class="site-title">
+            Seer's Search
+        </h1>
 
         <div class="login-container">
             <h2>Login</h2>
@@ -29,7 +28,7 @@
             <form id ="login-form">
 
                 <label for="username">Username</label>
-                <input class="textarea" type="text" id="username" name="username" placeholder="Enter your username" required/>
+                <input class="textarea" type="username" id="username" name="username" placeholder="Enter your username" required/>
                 
 
                 <label for="password">Password</label>
@@ -40,6 +39,9 @@
                 <a href="Register.html">don't have an account Register now!</a>
         </div>
 
+        <div class="login-success" id="login-success">
+            <p>Login Successful!</p>
+        </div>
 
     </body>
 
