feat: implement new user creation and deletion buttons in the dashboard

--- a/SQLDatabaseProject/Html/dashboard.html
+++ b/SQLDatabaseProject/Html/dashboard.html
@@ -44,10 +44,34 @@
     </div>
 
     <div id="Users" class="tab-users">
-        <div class="users-container-box">
+        <div class="new-user-creation-container">
+            <div class="new-user-creation-button">
+                <p>New User+</p>
+            </div>
+            <div class="new-user-creation-button">
+                <p>Delete User-</p>
+            </div>
+        </div>
+
+        <div class="users-info-container-box">
             <p>ss</p>
         </div>
-        <div class="users-container-box">
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
             <p>ss</p>
         </div>
     </div>
