added help button ui for creating an user

--- a/SQLDatabaseProject/Html/dashboard.html
+++ b/SQLDatabaseProject/Html/dashboard.html
@@ -44,15 +44,38 @@
     </div>
 
     <div id="Users" class="tab-users">
-        <div class="new-user-creation-container">
-            <div class="new-user-creation-button">
-                <p>New User+</p>
+
+        <div class="user-creation-buttons-container">
+
+            <div class="new-user-creation-container">
+                <div class="new-user-creation-button">
+                    <p>New User+</p>
+                </div>
+                <div class="new-user-creation-button">
+                    <p>Delete User-</p>
+                </div>
             </div>
-            <div class="new-user-creation-button">
-                <p>Delete User-</p>
+
+            <div class="new-user-creation-help-container">
+                <div class="new-user-creation-help">
+                    <p>?</p>
+                </div>
             </div>
+            
         </div>
 
+        <div class="users-info-container-box">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, doloremque dolorem nemo quos ut dolor quo voluptatibus iusto qui porro quia dolorum rerum facilis omnis atque ex vel modi! Necessitatibus.</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit architecto, repudiandae iusto corrupti nam et minus veritatis ipsum! Rem accusantium molestias provident maxime. Vel voluptas totam veniam deserunt ea qui!</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
+        <div class="users-info-container-box">
+            <p>ss</p>
+        </div>
         <div class="users-info-container-box">
             <p>ss</p>
         </div>
