--- a/SQLDatabaseProject/Html/dashboard.html
+++ b/SQLDatabaseProject/Html/dashboard.html
@@ -108,7 +108,9 @@
 
     <div id="IU-tabs-container" class="IU-tabs-container">
         <div class="IU-tab-activity" id="IU-tab-activity"> <!--tab-->
-
+            <div class="IU-inner-activity-info">
+                <p>Successful</p>
+            </div>
         </div>
         <div class="IU-tab-games" id="IU-tab-games"> <!--tab-->
 
