refactor: update CSS class names and improve layout for inner-user panels

--- a/SQLDatabaseProject/Html/dashboard.html
+++ b/SQLDatabaseProject/Html/dashboard.html
@@ -108,7 +108,7 @@
 
     <div id="IU-tabs-container" class="IU-tabs-container">
         <div class="IU-tab-activity" id="IU-tab-activity"> <!--tab-->
-            <div class="IU-inner-activity-info">
+            <div class="IU-Inner-Tab-activity-info">
                 <p>Successful</p>
             </div>
         </div>
