refactor: update dashboard layout and styling; modify session secret handling

--- a/SQLDatabaseProject/Html/dashboard.html
+++ b/SQLDatabaseProject/Html/dashboard.html
@@ -108,8 +108,26 @@
 
     <div id="IU-tabs-container" class="IU-tabs-container">
         <div class="IU-tab-activity" id="IU-tab-activity"> <!--tab-->
-            <div class="IU-Inner-Tab-activity-info">
-                <p>Successful</p>
+            <p class="IU-tab-activity-tittle">Activity</p>
+            <div class="IU-Inner-Tab-activity-stats-container">
+              
+
+                <div class="singles-container">
+
+                    <p>Time Scale</p>
+
+                    <div class="single-stat">
+                        <p>Total Time</p>
+                    </div>
+                    <div class="single-stat">
+                        <p>Times Played</p>
+                    </div>
+                    <div class="single-stat">
+                        <p>Games Played</p>
+                    </div>
+                </div>
+
+                <div class="activity-graph"></div>
             </div>
         </div>
         <div class="IU-tab-games" id="IU-tab-games"> <!--tab-->
